# BasicCMake

./: .gitignore  README.md
MyCMakeProject/: CMakeLists.txt  README.md
MyCMakeProject/astyle/: astyle-options.txt
MyCMakeProject/cli/: CMakeLists.txt  main.cpp
MyCMakeProject/include/MyCMakeProject/: libraryheader0.h  libraryheader1.h
MyCMakeProject/scripts/: run-cli.sh  run-tests.sh
MyCMakeProject/src/: CMakeLists.txt  librarymodule0.cpp  librarymodule1.cpp
MyCMakeProject/tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp  test_case0.cpp  test_case1.cpp
MyCMakeProject/tests/example_io/: example_input  example_output
